# deja-view

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SUGGESTIONS.md  USAGE.md
src/deja_view/: __init__.py  cli.py  config.py  daemon.py  models.py
src/deja_view/analysis/: __init__.py  graph.py  inference.py
src/deja_view/collectors/: __init__.py  base.py  browser.py  filesystem.py  git.py  process.py  terminal.py
src/deja_view/reporting/: __init__.py  narrative.py
src/deja_view/storage/: __init__.py  database.py
src/fortuna_prismatica/: __init__.py  cli.py  config.py  daemon.py  models.py
src/fortuna_prismatica/analysis/: __init__.py  graph.py  inference.py
src/fortuna_prismatica/collectors/: __init__.py  base.py  browser.py  filesystem.py  git.py  process.py  terminal.py
src/fortuna_prismatica/reporting/: __init__.py  narrative.py
src/fortuna_prismatica/storage/: __init__.py  database.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_collectors.py  test_config.py  test_daemon.py  test_integration.py  test_models.py  test_reporting.py  test_storage.py
